--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "css",
         "sass",
         "html",
-        "responsive",
+       "responsive",
         "theme",
         "template"
     ],
@@ -42,12 +42,15 @@
         "autoprefixer": "10.4.14",
         "browser-sync": "2.29.1",
         "chokidar": "3.5.3",
+        "clean-css-cli": "^5.6.3",
         "concurrently": "6.3.0",
         "postcss": "8.4.21",
         "prettier": "2.8.6",
         "pug": "3.0.2",
         "sass": "1.60.0",
+        "sharp": "^0.34.2",
         "shelljs": "0.8.5",
+        "terser": "^5.40.0",
         "upath": "2.0.1"
     }
 }
